--- a/_posts/2018-10-05-LL01.markdown
+++ b/_posts/2018-10-05-LL01.markdown
@@ -48,6 +48,6 @@ There's something in my Y chromosome that just needs to do this too. To collect 
 
 I think that's enough for today. To close the loop on the idea of "littoral", the above [shoreline picture](https://twitter.com/RedRiverCroft/status/1013733103003688961) gave me the name for this newsletter thing. As ideas become fully formed, moving from zone-based fragments into narrow focus, they become directional lines. That's when you have to act and catch them. Or they wash away to the back parts of memory, again.
 
-One last thing. I published [a blog post on taste](https://callumflack.design/blog) this week. I think it complements [a post on beauty](https://callumflack.design/blog/the-instantaneous-language-of-beauty) that I wrote a few months ago. I have in mind another about originality and authenticity, which should be a natural extension of these same ideas, but given that the last few posts have taken 500% longer than I anticipated, I'm inclined to start publishing smaller pieces and see how well they compile as a blog. Your thoughts?
+One last thing. I published [a blog post on taste](https://newsletter.tiep.me/blog) this week. I think it complements [a post on beauty](https://newsletter.tiep.me/blog/the-instantaneous-language-of-beauty) that I wrote a few months ago. I have in mind another about originality and authenticity, which should be a natural extension of these same ideas, but given that the last few posts have taken 500% longer than I anticipated, I'm inclined to start publishing smaller pieces and see how well they compile as a blog. Your thoughts?
 
 Yours in curious syntactic awkwardness,<br>Callum
