--- a/_posts/2018-11-02-LL03.md
+++ b/_posts/2018-11-02-LL03.md
@@ -34,7 +34,7 @@ But it's not just about price signaling. The presentation of said product is the
 
 > What happens if you haven't got much money, but you want to do an impactful wedding invitation? Then you make it really creative. If you can't put actual money into the paper or the printing, then what you can put in is something different, which is imagination.<span>[Rory Sutherland](https://www.edge.org/conversation/rory_sutherland-things-to-hang-on-your-mental-mug-tree)</span>
 
-To circle back to ideas in [past letters](https://the-littoral-line.callumflack.design/), beauty is a signal for worthwhile information. We often understand beauty as symmetry and order. When humans re-order and embody information as products (to paraphrase Cesar Hidalgo for the third time in as many newsletters), then we're using effortful System 2 thinking. Any time we see evidence of System 2 thinking—which is really anytime we see evidence of creativity and imagination—we understand it as costly, and we pay attention.
+To circle back to ideas in [past letters](https://the-littoral-line.newsletter.tiep.me/), beauty is a signal for worthwhile information. We often understand beauty as symmetry and order. When humans re-order and embody information as products (to paraphrase Cesar Hidalgo for the third time in as many newsletters), then we're using effortful System 2 thinking. Any time we see evidence of System 2 thinking—which is really anytime we see evidence of creativity and imagination—we understand it as costly, and we pay attention.
 
 <img src="/src/assets/LL03-desire-path.jpg" style="width: 100%; height: auto;" class="Image">
 
