--- a/_posts/2019-08-19-LL11.md
+++ b/_posts/2019-08-19-LL11.md
@@ -40,11 +40,11 @@ See also my short "Watching" notes below.
 
 ### Other things
 
-**My half year review (only 2 months late).** I wrote up a short, cathartic [half-year review post](https://www.callumflack.design/blog/2019-half-year-review.html). Context: I’m a designer who also codes because I think this is the best way to create tangible outcomes in websites. As a freelancer, it becomes easy to take on more work. Yet, especially because I already gave myself two jobs, it’s very easy to have too much to do. The trick I’m learning is to continually search for better people to work with, so I can do less with more focus.
+**My half year review (only 2 months late).** I wrote up a short, cathartic [half-year review post](https://newsletter.tiep.me/blog/2019-half-year-review.html). Context: I’m a designer who also codes because I think this is the best way to create tangible outcomes in websites. As a freelancer, it becomes easy to take on more work. Yet, especially because I already gave myself two jobs, it’s very easy to have too much to do. The trick I’m learning is to continually search for better people to work with, so I can do less with more focus.
 
-**I found myself in emotional agreement with Jim Antonopolous about the Creative Director being a dead duck.** So I [published my thoughts and experiences](https://www.callumflack.design/blog/is-the-creative-director-dead.html) on the topic. The long and short of it is I think Creative Directors in this day and age are a wee bit useless if they don't have digital literacy, and they should at least be familiar with what Information Theory is.
+**I found myself in emotional agreement with Jim Antonopolous about the Creative Director being a dead duck.** So I [published my thoughts and experiences](https://newsletter.tiep.me/blog/is-the-creative-director-dead.html) on the topic. The long and short of it is I think Creative Directors in this day and age are a wee bit useless if they don't have digital literacy, and they should at least be familiar with what Information Theory is.
 
-**I’ve finally managed to fully replicate the Jekyll paradigm using Vue.js on my personal website.** I was previously using [Nuxt.js](https://nuxtjs.org/) (which I use for most of my client projects) but I think blogging needs to be much lighter. [Vuepress](https://vuepress.vuejs.org/) and [Gridsome](https://gridsome.org) aren’t quite laser-focused on markdown—the essential writing file format in my opinion—or aren't quite "blog aware" enough. I was frustrated for some months until I stumbled across the excellent [Saber](https://saber.land) framework. So now [my site](https://www.callumflack.design/) is now exactly I’d wished: just a folder of markdown files with a Vue.js presentation layer. The repo is [open-sourced here](https://github.com/callumflack/callum-flack-design) in all it's 18 branches of graceless ageing.
+**I’ve finally managed to fully replicate the Jekyll paradigm using Vue.js on my personal website.** I was previously using [Nuxt.js](https://nuxtjs.org/) (which I use for most of my client projects) but I think blogging needs to be much lighter. [Vuepress](https://vuepress.vuejs.org/) and [Gridsome](https://gridsome.org) aren’t quite laser-focused on markdown—the essential writing file format in my opinion—or aren't quite "blog aware" enough. I was frustrated for some months until I stumbled across the excellent [Saber](https://saber.land) framework. So now [my site](https://newsletter.tiep.me/) is now exactly I’d wished: just a folder of markdown files with a Vue.js presentation layer. The repo is [open-sourced here](https://github.com/callumflack/callum-flack-design) in all it's 18 branches of graceless ageing.
 
 
 ### Status board
