--- a/_posts/2018-10-19-LL02.markdown
+++ b/_posts/2018-10-19-LL02.markdown
@@ -18,7 +18,7 @@ Why irritated, you say? Let's go back a step and define curiosity—our primary 
 
 > Dad, why are some Frangipanis pink and others yellow?
 
-Curiosity begins with the desire to better compress knowledge by finding irregularities, and becomes a search for interestingness. When we do this, we start to develop knowhow for [noticing beauty](https://callumflack.design/blog/the-instantaneous-language-of-beauty), which is actually a sensory method for discovering potentially manipulative knowledge. So that's the concept of “interesting” in a nutshell. I argue that [taste](https://callumflack.design/blog/the-matter-of-taste) is simply the continuation of “being interested” over many years within a specific domain until one has developed an intuitive tacit knowhow for that domain.
+Curiosity begins with the desire to better compress knowledge by finding irregularities, and becomes a search for interestingness. When we do this, we start to develop knowhow for [noticing beauty](https://newsletter.tiep.me/blog/the-instantaneous-language-of-beauty), which is actually a sensory method for discovering potentially manipulative knowledge. So that's the concept of “interesting” in a nutshell. I argue that [taste](https://newsletter.tiep.me/blog/the-matter-of-taste) is simply the continuation of “being interested” over many years within a specific domain until one has developed an intuitive tacit knowhow for that domain.
 
 Now think of irritation as the flip side of “interesting” and you'll understand that just like interestingness, it's a marker for worthwhile attention. While we don't like being irritated, I venure that dim irritations, the ones that linger and recur over time, are extremely useful when they're understood as our subconscious trying to get our attention to address an idea. As Claude Shannon said, “a genius is simply someone who is usefully irritated”.
 
@@ -30,7 +30,7 @@ We have an abundance of information. Yet it's mostly a single-player game to con
 
 In the past fortnight I've read a little about Paul Romer, this year's Nobel Prize in economics. His work mathematically proves that the non-rival nature of ideas both instigate and perpetuate economic growth. As Tyler Cowen says, [“if you are wondering which economist has done the most to help us explain Silicon Valley, you would turn first to Romer.”](https://marginalrevolution.com/marginalrevolution/2018/10/paul-romer-won-nobel-prize-economics.html)
 
-I relate Romer's “ideas as growth” concept back to Cesar Hidalgo's book “Why Information Grows” (spoken about in the [previous LL issue](https://thelittoralline.callumflack.design/LL01)) where Hidalgo defines a product as “crystallised imagination", that is, a product is a replicable, scalable object that embodies the imagination of humans in order to be useful to other humans, and is therefore economically valuable. So it seems, in my naive way, that if we wish for our children to inherit our [continued relative economic abundance](https://twitter.com/MaxCRoser/status/1049241955916554240), then we'll need to acknowledge the importance of good ideas as the gateway between general information and valuable products, and understand how to judge a good idea in terms of use, not novelty.
+I relate Romer's “ideas as growth” concept back to Cesar Hidalgo's book “Why Information Grows” (spoken about in the [previous LL issue](https://thelittoralline.newsletter.tiep.me/LL01)) where Hidalgo defines a product as “crystallised imagination", that is, a product is a replicable, scalable object that embodies the imagination of humans in order to be useful to other humans, and is therefore economically valuable. So it seems, in my naive way, that if we wish for our children to inherit our [continued relative economic abundance](https://twitter.com/MaxCRoser/status/1049241955916554240), then we'll need to acknowledge the importance of good ideas as the gateway between general information and valuable products, and understand how to judge a good idea in terms of use, not novelty.
 
 I think the way to do this is to get better at observation and reflection. Both are underrated activities in a world yet to shed the idea of the [“move fast and break things”](http://v1.benbarry.com/project/facebook-propaganda-posters) mantra (an aside: this mantra is an example of how big an impact [Instagoogletweetface](https://youtu.be/HSf_lgV3KYw?t=1040) has had on our culture). Sure, you have to build something to get feedback, I get that. But to properly assess feedback and determine the value of an idea, one has to know how to stop, look and listen. That's why I like the idea of the littoral zone as metaphor for idea curation—that of following curiosity into the tidal zones, to notice and extract feedback from ideas where they wash up.
 
