--- a/_posts/2019-04-26-LL10.md
+++ b/_posts/2019-04-26-LL10.md
@@ -24,7 +24,7 @@ What this does is introduce functionality via composition _in markdown_. As John
 
 > No longer do you need to apply global plugins to your app or use special syntax. With composition you can import a component that's meant for a particular thing, like a live code editor, and then use it precisely where you need it. It's simple but elegant.
 
-The giant ideas contained in that simple quote are enabled if you're building your site with a modern "[Reactive Javascript](https://callumflack.design/blog/the-paradigm-shift-in-website-publishing)" system. With Reactive Javascript at our disposal, and with a system such as [MDX](https://mdxjs.com/), [Nuxtent](https://github.com/nuxt-community/nuxtent-module), [vmark](https://github.com/egoist/vmark) or [whatever](https://github.com/haiiro-io/violet), we gain the ability to create your own _fully interactive markdown tag elements_, which gives us all kinds of creative opportunities.
+The giant ideas contained in that simple quote are enabled if you're building your site with a modern "[Reactive Javascript](https://newsletter.tiep.me/blog/the-paradigm-shift-in-website-publishing)" system. With Reactive Javascript at our disposal, and with a system such as [MDX](https://mdxjs.com/), [Nuxtent](https://github.com/nuxt-community/nuxtent-module), [vmark](https://github.com/egoist/vmark) or [whatever](https://github.com/haiiro-io/violet), we gain the ability to create your own _fully interactive markdown tag elements_, which gives us all kinds of creative opportunities.
 
 What if, instead of navigating a CMS admin system, you simply had a clean white screen where you could write markdown and simply add the tag for a video? Or add in a newsletter subscribe form? Or add in a graph with an attribute that links to data from your Google Sheets?
 
@@ -36,7 +36,7 @@ Mind you, with some design _chutzpah_, we can bring in easier _better_ UI (user 
 
 <img src="/src/assets/LL10-notion-open.jpg" alt="Notion's forward slash menu command reveal" style="width: 100%; height: auto;" class="Image">
 
-Web publishing is still young. These new authoring ideas—which I think are tied to the [paradigm shift in web tooling](https://callumflack.design/blog/the-paradigm-shift-in-website-publishing), the rise of [DX](https://hackernoon.com/the-best-practices-for-a-great-developer-experience-dx-9036834382b0) (developer experience), endless opensource ideation and the React-JAMstack inspired [zero config philosophy](https://jxnblk.com/blog/iterations-on-a-theme/#static-site-generators--zero-config)—represent the next generation of publishing tools. They matter because when you start writing from a blank slate with _zero configuration_ then we don't need to cognitively engage in remembering how the process works. So we can get straight down to the hard work of writing clearly.
+Web publishing is still young. These new authoring ideas—which I think are tied to the [paradigm shift in web tooling](https://newsletter.tiep.me/blog/the-paradigm-shift-in-website-publishing), the rise of [DX](https://hackernoon.com/the-best-practices-for-a-great-developer-experience-dx-9036834382b0) (developer experience), endless opensource ideation and the React-JAMstack inspired [zero config philosophy](https://jxnblk.com/blog/iterations-on-a-theme/#static-site-generators--zero-config)—represent the next generation of publishing tools. They matter because when you start writing from a blank slate with _zero configuration_ then we don't need to cognitively engage in remembering how the process works. So we can get straight down to the hard work of writing clearly.
 
 > We shape our tools and thereafter they shape us. These extensions of our senses begin to interact with our senses. These media become a massage. <span>John Culkin, [A Schoolman’s Guide to Marshall McLuhan](https://quoteinvestigator.com/2016/06/26/shape/)</span>
 
@@ -44,7 +44,7 @@ Web publishing is still young. These new authoring ideas—which I think are tie
 
 After researching methods to improve my use of Javascript components in markdown, it occurred to me that I've applied this same priority towards markdown in this newsletter. Inspired by [a tweet that was surprisingly popular](https://twitter.com/callumflack/status/1121980694375256064), I wrote up a post I thought might be helpful for other people to know how they can manage _not_ to use an email platform to write, and, as a bonus, get to write in markdown:
 
-**Read:** [How to publish a newsletter so you own your writing.](https://callumflack.design/blog/how-to-publish-your-newsletter-so-you-own-your-writing)
+**Read:** [How to publish a newsletter so you own your writing.](https://newsletter.tiep.me/blog/how-to-publish-your-newsletter-so-you-own-your-writing)
 
 Check it out, and please do let me know what you think.
 
@@ -52,7 +52,7 @@ Check it out, and please do let me know what you think.
 
 It's important I use things like my personal site to test out new ideas and keep abreast of frameworks and module progress. (I use the brilliant [Nuxt.js](https://nuxtjs.org/) to power my site, in case you're wondering). I can then bring this learning back into client projects. Like I said a few letters ago, it's only when you go back to using the old tools that you know how good the new tools are.
 
-Once again, you can learn more about these paradigm shifts here: https://callumflack.design/blog/the-paradigm-shift-in-website-publishing
+Once again, you can learn more about these paradigm shifts here: https://newsletter.tiep.me/blog/the-paradigm-shift-in-website-publishing
 
 In my research, I read up on the progress of MDX -->
 
@@ -60,7 +60,7 @@ In my research, I read up on the progress of MDX -->
 
 **One.** When in doubt, do the thing you wish were your habit. [Link.](https://twitter.com/mesolude/status/1119333530557763584)
 
-**Two.** Timothy Roy had some [great feedback](https://twitter.com/coyotespike/status/1122212895532683264) on the "Wealth is Information Growth" section from [the last newsletter](https://thelittoralline.callumflack.design/LL09). Everytime there's a question about these ideas, it's a chance to rethink, double-check and/or learn from others. Especially on twitter, where the free-for-all nature within clandestine smaller circles of colleagues and mutuals can easily triple a few day's worth of semi-insights within 2 minutes. [Check this fantastic thread of questions from @KaseyKlimes](https://twitter.com/KaseyKlimes/status/1121937002054606849), whom I knew for all of 5 minutes before this conversation.
+**Two.** Timothy Roy had some [great feedback](https://twitter.com/coyotespike/status/1122212895532683264) on the "Wealth is Information Growth" section from [the last newsletter](https://thelittoralline.newsletter.tiep.me/LL09). Everytime there's a question about these ideas, it's a chance to rethink, double-check and/or learn from others. Especially on twitter, where the free-for-all nature within clandestine smaller circles of colleagues and mutuals can easily triple a few day's worth of semi-insights within 2 minutes. [Check this fantastic thread of questions from @KaseyKlimes](https://twitter.com/KaseyKlimes/status/1121937002054606849), whom I knew for all of 5 minutes before this conversation.
 
 **Three.** Linus Torvalds on [25 years of Linux](https://www.linuxjournal.com/content/25-years-later-interview-linus-torvalds):
 
